--- a/example/index.html
+++ b/example/index.html
@@ -1,6 +1,11 @@
+<!doctype html>
 <html>
+<head>
+  <meta charset="utf-8">
+</head>
 <body>
-<h1>Привет</h1>
-<img src="yandex.png" width="115" height="43" alt="Яндекс" />
+  <h1>Привет</h1>
+  <img src="yandex.png" width="115" height="43" alt="Яндекс">
+  <img src="yandex.svg" width="140" height="100" alt="Яндекс">
 </body>
 </html>
